Added print functionality

--- a/src/main/webapp/app/entities/order/order/order.component.html
+++ b/src/main/webapp/app/entities/order/order/order.component.html
@@ -8,6 +8,9 @@
                 Create a new Order
             </span>
         </button>
+        <button id="jh-create-entity" class="btn btn-secondary float-right mr-2" (click)="exportFile('PRINT')">
+            Print
+        </button>
         <button id="jh-create-entity" class="btn btn-secondary float-right mr-2" (click)="exportFile('PDF')">
             Export PDF
         </button>
